# orcid-pubmetrics

./: .gitignore  LICENSE  README.md  docker-compose.yml  fix_sjr.py  plan.md  project.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/adapters/: jcr_clarivate.py  open_editors.py  openalex.py  publindex.py  sjr_csv.py
backend/app/api/: analysis.py  comparison.py  og.py  publindex.py
backend/app/domain/: analytics.py  comparison.py  models.py
backend/app/infra/: container.py  settings.py
backend/app/ports/: editorial_boards.py  journal_metrics.py  publications.py
backend/scripts/: probe_openalex.py  probe_sjr.py
backend/tests/: test_api_analysis.py  test_health.py
backend/tests/contract/: test_journal_metrics_provider.py
backend/tests/fixtures/sjr/: scimagojr_2023.csv
backend/tests/unit/: test_analytics.py  test_comparison.py  test_openalex_adapter.py
data/: README.md
data/publindex/: publindex.json  publindex_current.json
docs/: Cuestionario_App_ORCID.docx  build_questionnaire.js  build_questionnaire_corto.js  design-brief.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  types.ts  urlParams.ts
frontend/src/api/: client.ts
frontend/src/components/: ShareButton.tsx  Shell.tsx  charts.tsx  primitives.tsx
frontend/src/hooks/: useMeasure.ts  usePublindex.ts
scripts/: build_informe_conflictos_editoriales.py  fetch_publindex.py
(+18 files in other folders)
